# hawkeye

./: .gitignore  AI_THREAT_ANALYSIS_README.md  CHANGELOG.md  Dockerfile  README.md  application.py  debug_introspection.py  debug_server_config.py  demo_ai_threat_analysis.py  docker-compose.yml  env.example  example_workflow.sh  push-wiki  pyproject.toml  requirements.txt  setup.py  test_enhanced_environment_detection.py  test_introspection.py  test_sync_introspection.py
.github/workflows/: ci.yml
docker/: entrypoint.sh
docs/: Design-Threat-Analysis-Report.md  deafult_prompt.md  installation.md  module-functions.txt  notes.md  security_guidelines.md  task-list-threat-analysis-report.md  task-list-threat-analysis.md  task_list-inspect-mcp.md  task_list.md  tasklist-dev-notes.md  tree-structure.txt  troubleshooting.md  uml.txt  user_manual.md  wiki-content  workflow_guide.md
docs/api/: README.md
docs/architecture/: data-flow-architecture.md
docs/archive/: Design-Threat-Analysis.md  Design-inspect-mcp.md  Design.md  task-list-threat-analysis-report.md  task-list-threat-analysis.md
docs/configuration/: mcp_introspection.md
docs/conventions/: flask.md  langchain.md  python.md  sqlAlchemy.md
docs/design-patterns/: factory-pattern.md
docs/dev_notes/: README.md
docs/dev_notes/analyze-threats/: attack-chain-analysis.md  threat-intelligence.md  vulnerability-assessment.md
docs/dev_notes/detect/: state-diagram.md
docs/dev_notes/scan/: sequence-diagram.md  state-diagram.md
docs/examples/: mcp_introspection_examples.md
docs/migration/: nodejs_to_python.md
docs/performance/: mcp_introspection_tuning.md
docs/security/: mcp_introspection_security.md
docs/wiki/: README.md  security_guidelines.md  user_manual.md  workflow_guide.md
docs/wiki/api/: README.md  ai_threat_analysis.md  detection.md  mcp_introspection.md  scanner.md
docs/wiki/dev_notes/: README.md
docs/wiki/dev_notes/analyze-threats/: ai-providers.md  class-diagram.md  compliance-mapping.md  report-generation.md  risk-prioritization.md  sequence-diagram.md  state-diagram.md  threat-modeling.md
docs/wiki/dev_notes/architecture/: system-overview.md
docs/wiki/dev_notes/design-patterns/: README.md  abstract-base-class-pattern.md  adapter-pattern.md  builder-pattern.md  chain-of-responsibility-pattern.md  command-pattern.md  strategy-pattern.md  template-method-pattern.md
docs/wiki/dev_notes/detect/: class-diagram.md  config-discovery.md  docker-inspection.md  environment-analysis.md  mcp-introspection.md  npx-detection.md  process-enumeration.md  protocol-verification.md  risk-assessment.md  sequence-diagram.md  transport-detection.md
docs/wiki/dev_notes/scan/: class-diagram.md  (+6 more)
docs/workflows/: error-handling.md
examples/: README.md
src/hawkeye/: __init__.py  __main__.py  exceptions.py
src/hawkeye/assessment/: __init__.py  auth_analysis.py  base.py  compliance.py  config_analysis.py  cvss_scoring.py  default_detect.py  exceptions.py  remediation.py  transport_security.py
src/hawkeye/cli/: __init__.py  config_file.py  detect_commands.py  main.py  output_control.py  progress.py  report_commands.py  scan_commands.py  validation.py
src/hawkeye/config/: __init__.py  settings.py
src/hawkeye/detection/: __init__.py  base.py  config_discovery.py  docker_inspect.py  env_analysis.py  mcp_introspection.py  npx_detect.py  pipeline.py  process_enum.py  protocol_verify.py  transport_detect.py
src/hawkeye/docs/: module-functions.txt  uml.txt
src/hawkeye/models/: __init__.py
src/hawkeye/reporting/: __init__.py  aggregation.py  base.py  csv_reporter.py  executive_summary.py  html_reporter.py  introspection_reporter.py  json_reporter.py  mcp_analyzer.py  pipeline_converter.py  threat_analyzer.py  xml_reporter.py
src/hawkeye/scanner/: __init__.py  base.py  connection_pool.py  fingerprint.py  rate_limiter.py  target_enum.py  tcp_scanner.py  udp_scanner.py
src/hawkeye/services/: __init__.py
src/hawkeye/utils/: __init__.py  logging.py
tests/: __init__.py
tests/compatibility/: test_mcp_version_compatibility.py
tests/e2e/: test_mcp_introspection_e2e.py  test_workflows.py
tests/fixtures/: mock_mcp_servers.py
tests/integration/: __init__.py  test_assessment.py  test_cli.py  test_detection.py  test_mcp_introspection_complete.py  test_mcp_risk_analysis.py  test_mcp_transport_integration.py  test_real_mcp_servers.py  test_reporting.py  test_scanning.py
tests/performance/: test_benchmarks.py  test_mcp_introspection_benchmarks.py  test_mcp_load_testing.py  test_mcp_memory_leaks.py  test_mcp_performance_regression.py
tests/security/: test_mcp_introspection_security.py
tests/test_assessment/: __init__.py  test_auth_analysis.py  test_base.py  test_config_analysis.py  test_cvss_scoring.py  test_default_detect.py  test_remediation.py  test_transport_security.py
tests/test_cli/: __init__.py  test_commands.py  test_validation.py
tests/test_config/: __init__.py  test_settings.py
tests/test_detection/: __init__.py  test_ai_threat_analysis.py  test_ai_threat_phase5.py  test_ai_threat_phase5_working.py  test_config_discovery.py  test_docker_inspect.py  test_env_analysis.py  test_mcp_introspection_old.py  test_npx_detect.py  test_phase5_validation.py  test_pipeline_integration.py  test_process_enum.py  test_protocol_verify.py  test_transport_detect.py
tests/test_detection/test_mcp_introspection/: __init__.py  test_compat.py  test_error_scenarios.py  test_fallback.py  test_http_transport.py  test_metrics.py  test_migration.py  test_models.py  test_optimization.py  test_pool.py  test_risk_categorizer.py  test_risk_scoring.py  test_sse_transport.py  test_stdio_transport.py  test_threat_model.py  test_tool_risk.py  test_transport_base.py  test_transport_factory.py
tests/test_reporting/: __init__.py  test_csv_reporter.py  test_executive_summary.py  test_html_reporter.py  test_introspection_reports.py  test_json_reporter.py  test_xml_reporter.py
tests/test_scanner/: __init__.py  test_target_enum.py  test_tcp_scanner.py  test_udp_scanner.py
tests/test_utils/: __init__.py  test_logging.py
(+79 files in other folders)
